backend/test/resources/valid/split_partial_to_join.lgf
@nodes
label type ref
0 10 1
1 0 35
2 0 36
3 0 21
4 20 1
5 20 1
6 11 1
7 0 22
@arcs
    condition
0 1 ""
0 2 ""
0 3 ""
1 4 ""
2 4 ""
3 5 ""
4 5 ""
6 7 "SONST"
6 0 "x"
7 5 ""
@attributes
target 5
