backend/test/resources/invalid/randomDag-g.10.3.graphml-1.lgf
@nodes
label	type	ref
0	0	27
1	0	26
2	0	25
3	0	24
4	12	70
5	10	0
6	20	1
7	20	2
8	10	0
9	20	4
10	10	0
11	0	23
12	0	22
13	0	21
14	0	20
15	0	19
16	0	18
17	0	17
18	0	16
19	0	15
20	0	14
21	0	13
22	0	12
23	0	11
24	0	10
25	0	9
26	0	8
27	0	7
28	0	6
29	0	5
30	0	4
31	0	3
32	0	2
33	0	1
34	0	0
@arcs
		label	condition
0	34	0	""
1	7	1	""
2	23	2	""
3	19	3	""
4	30	4	73
4	26	5	16
5	15	6	""
5	7	7	""
5	20	8	""
5	28	9	""
10	17	10	""
10	7	11	""
7	9	12	""
8	0	13	""
8	3	14	""
8	5	15	""
8	6	16	""
8	7	17	""
6	10	18	""
11	21	19	""
12	22	20	""
13	2	21	""
14	25	22	""
15	4	23	""
16	9	24	""
17	18	25	""
18	16	26	""
19	27	27	""
20	9	28	""
21	32	29	""
22	9	30	""
23	1	31	""
24	33	32	""
25	7	33	""
26	11	34	""
27	29	35	""
28	31	36	""
29	13	37	""
30	14	38	""
31	6	39	""
32	12	40	""
33	6	41	""
34	24	42	""
@attributes
target 9
recommended ""
